[gd_scene load_steps=9 format=3 uid="uid://b4bhjd6uypn3k"]

[ext_resource type="PackedScene" uid="uid://dubkw6fn2rh5c" path="res://addons/DatePickerFiles/CalendarPop/DatePickerPanel.tscn" id="1_u5dfp"]
[ext_resource type="Script" path="res://scripts/user_form.gd" id="1_y5fov"]
[ext_resource type="Texture2D" uid="uid://bg7lasqjlbc7j" path="res://assets/trash.svg" id="2_4xdmf"]
[ext_resource type="Texture2D" uid="uid://b8di5yi580nui" path="res://assets/cancel.svg" id="2_6qrx3"]
[ext_resource type="Texture2D" uid="uid://dktogpmoe6srn" path="res://assets/edit.svg" id="3_828qv"]
[ext_resource type="Texture2D" uid="uid://gvesyl0dyg1b" path="res://assets/chevron.svg" id="6_1sxam"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_ycqvj"]
color = Color(0, 0, 0, 0.392157)
thickness = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mqb5v"]
content_margin_left = 8.0
content_margin_right = 8.0
bg_color = Color(0.153965, 0.180138, 0.355205, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[node name="UserForm" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y5fov")
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="TitleBar" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Actions" type="HBoxContainer" parent="PanelContainer/VBoxContainer/TitleBar"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
size_flags_horizontal = 0

[node name="Delete" type="TextureButton" parent="PanelContainer/VBoxContainer/TitleBar/Actions"]
modulate = Color(0.698039, 0, 0.313726, 1)
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 6
texture_normal = ExtResource("2_4xdmf")
texture_pressed = ExtResource("2_4xdmf")
ignore_texture_size = true
stretch_mode = 4

[node name="Edit" type="TextureButton" parent="PanelContainer/VBoxContainer/TitleBar/Actions"]
modulate = Color(0, 0.207843, 0.729412, 1)
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 6
texture_normal = ExtResource("3_828qv")
texture_pressed = ExtResource("3_828qv")
ignore_texture_size = true
stretch_mode = 4

[node name="Title" type="Label" parent="PanelContainer/VBoxContainer/TitleBar"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 1
text = "Add User"
horizontal_alignment = 1

[node name="Close" type="TextureButton" parent="PanelContainer/VBoxContainer/TitleBar"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 8
texture_normal = ExtResource("2_6qrx3")
texture_pressed = ExtResource("2_6qrx3")
ignore_texture_size = true
stretch_mode = 4

[node name="HSeparator" type="HSeparator" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 32
theme_override_styles/separator = SubResource("StyleBoxLine_ycqvj")

[node name="FieldsForm" type="VBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="FirstName" type="HBoxContainer" parent="PanelContainer/VBoxContainer/FieldsForm"]
layout_mode = 2
size_flags_vertical = 6

[node name="FirstNameEdit" type="LineEdit" parent="PanelContainer/VBoxContainer/FieldsForm/FirstName"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
alignment = 2
text_direction = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/FieldsForm/FirstName"]
layout_mode = 2
size_flags_horizontal = 3
text = "الإسم الشّخصي:"
horizontal_alignment = 2

[node name="LastName" type="HBoxContainer" parent="PanelContainer/VBoxContainer/FieldsForm"]
layout_mode = 2
size_flags_vertical = 6

[node name="LastNameEdit" type="LineEdit" parent="PanelContainer/VBoxContainer/FieldsForm/LastName"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
alignment = 2
text_direction = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/FieldsForm/LastName"]
layout_mode = 2
size_flags_horizontal = 3
text = "الإسم العائلي:"
horizontal_alignment = 2

[node name="RegisterDate" type="HBoxContainer" parent="PanelContainer/VBoxContainer/FieldsForm"]
layout_mode = 2
size_flags_vertical = 6

[node name="RegisterDatePicker" parent="PanelContainer/VBoxContainer/FieldsForm/RegisterDate" instance=ExtResource("1_u5dfp")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="DateCover" type="ColorRect" parent="PanelContainer/VBoxContainer/FieldsForm/RegisterDate/RegisterDatePicker"]
unique_name_in_owner = true
visible = false
layout_mode = 2
color = Color(0, 0, 0.313726, 0.215686)

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/FieldsForm/RegisterDate"]
layout_mode = 2
size_flags_horizontal = 3
text = "تاريخ التّسجيل:"
horizontal_alignment = 2

[node name="RegisterFee" type="HBoxContainer" parent="PanelContainer/VBoxContainer/FieldsForm"]
layout_mode = 2
size_flags_vertical = 6

[node name="RegisterFeeCheckbox" type="CheckBox" parent="PanelContainer/VBoxContainer/FieldsForm/RegisterFee"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/FieldsForm/RegisterFee"]
layout_mode = 2
size_flags_horizontal = 3
text = "مصاريف التّسجيل:"
horizontal_alignment = 2

[node name="AssuranceFee" type="HBoxContainer" parent="PanelContainer/VBoxContainer/FieldsForm"]
layout_mode = 2
size_flags_vertical = 6

[node name="AssuranceFeeCheckBox" type="CheckBox" parent="PanelContainer/VBoxContainer/FieldsForm/AssuranceFee"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/FieldsForm/AssuranceFee"]
layout_mode = 2
size_flags_horizontal = 3
text = "مصاريف الضّمان (Assurance):"
horizontal_alignment = 2

[node name="Payment" type="HBoxContainer" parent="PanelContainer/VBoxContainer/FieldsForm"]
layout_mode = 2
size_flags_vertical = 6

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/VBoxContainer/FieldsForm/Payment"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_stretch_ratio = 0.5
theme_override_styles/panel = SubResource("StyleBoxFlat_mqb5v")

[node name="Payment" type="HBoxContainer" parent="PanelContainer/VBoxContainer/FieldsForm/Payment/PanelContainer"]
unique_name_in_owner = true
modulate = Color(1, 0.14902, 0.219608, 1)
layout_mode = 2
alignment = 1
metadata/_edit_group_ = true

[node name="Texture" type="TextureRect" parent="PanelContainer/VBoxContainer/FieldsForm/Payment/PanelContainer/Payment"]
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("6_1sxam")
expand_mode = 2
stretch_mode = 4

[node name="Month" type="Label" parent="PanelContainer/VBoxContainer/FieldsForm/Payment/PanelContainer/Payment"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "4"

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/FieldsForm/Payment"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5

[node name="PayMonth" type="Button" parent="PanelContainer/VBoxContainer/FieldsForm/Payment/VBoxContainer"]
layout_mode = 2
text = "دفع ثمن شهر"

[node name="UnpayMonth" type="Button" parent="PanelContainer/VBoxContainer/FieldsForm/Payment/VBoxContainer"]
layout_mode = 2
text = "ازالة ثمن شهر"

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 32
theme_override_styles/separator = SubResource("StyleBoxLine_ycqvj")

[node name="ActionsContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_right = 32

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/ActionsContainer"]
layout_mode = 2

[node name="Cancel" type="Button" parent="PanelContainer/VBoxContainer/ActionsContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "إلغاء"

[node name="Ok" type="Button" parent="PanelContainer/VBoxContainer/ActionsContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "تمّ"

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/TitleBar/Actions/Delete" to="." method="_on_delete_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/TitleBar/Actions/Edit" to="." method="_on_edit_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/TitleBar/Close" to="." method="_on_cancel_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/FieldsForm/Payment/VBoxContainer/PayMonth" to="." method="_on_pay_month_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/FieldsForm/Payment/VBoxContainer/UnpayMonth" to="." method="_on_unpay_month_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/ActionsContainer/HBoxContainer/Cancel" to="." method="_on_cancel_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/ActionsContainer/HBoxContainer/Ok" to="." method="_on_ok_pressed"]
